[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pp-boatwatch"
version = "0.0.1"
dependencies = [
  "aiohttp==3.11.16",
  "aiosignal==1.3.1",
  "attrs==23.2.0",
  "certifi==2025.1.31",
  "charset-normalizer==3.3.2",
  "filelock==3.14.0",
  "frozenlist==1.4.1",
  "fsspec==2024.5.0",
  "huggingface-hub==0.30.1",
  "idna==3.7",
  "Jinja2==3.1.6",
  "MarkupSafe==2.1.5",
  "mpmath==1.3.0",
  "multidict==6.0.5",
  "networkx==3.3",
  "numpy==2.2.4",
  "nvidia-cublas-cu12==12.4.5.8",
  "nvidia-cuda-cupti-cu12==12.4.127",
  "nvidia-cuda-nvrtc-cu12==12.4.127",
  "nvidia-cuda-runtime-cu12==12.4.127",
  "nvidia-cudnn-cu12==9.1.0.70",
  "nvidia-cufft-cu12==11.2.1.3",
  "nvidia-curand-cu12==10.3.5.147",
  "nvidia-cusolver-cu12==11.6.1.9",
  "nvidia-cusparse-cu12==12.3.1.170",
  "nvidia-cusparselt-cu12==0.6.2",
  "nvidia-nccl-cu12==2.21.5",
  "nvidia-nvjitlink-cu12==12.4.127",
  "nvidia-nvtx-cu12==12.4.127",
  "packaging==24.0",
  "pillow==10.3.0",
  "PyYAML==6.0.1",
  "regex==2024.5.15",
  "requests==2.32.2",
  "safetensors==0.4.3",
  "slack_sdk==3.35.0",
  "sympy==1.13.1",
  "tokenizers==0.21.1",
  "torch==2.6.0",
  "tqdm==4.66.4",
  "transformers==4.50.3",
  "triton==3.2.0",
  "typing_extensions==4.12.0",
  "urllib3==2.3.0",
  "yarl==1.18.3",
]

[project.scripts]
find-objects = "ppboatwatch.find_objects:main"
ppbbww = "ppboatwatch.ppbbww:main"
sample-streams = "ppboatwatch.sample_streams:main"

[tool.setuptools]
packages = ["ppboatwatch"]
