[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pp-boatwatch"
version = "0.0.1"
dependencies = [
  "aiohttp==3.13.2",
  "aiosignal==1.4.0",
  "attrs==25.4.0",
  "certifi==2025.11.12",
  "charset-normalizer==3.4.4",
  "filelock==3.20.0",
  "frozenlist==1.8.0",
  "fsspec==2025.10.0",
  "huggingface-hub==1.1.4",
  "idna==3.11",
  "Jinja2==3.1.6",
  "MarkupSafe==3.0.3",
  "mpmath==1.3.0",
  "multidict==6.7.0",
  "networkx==3.5",
  "numpy==2.3.4",
  "nvidia-cublas-cu12==12.9.1.4",
  "nvidia-cuda-cupti-cu12==12.9.79",
  "nvidia-cuda-nvrtc-cu12==12.9.86",
  "nvidia-cuda-runtime-cu12==12.9.79",
  "nvidia-cudnn-cu12==9.16.0.29",
  "nvidia-cufft-cu12==11.4.1.4",
  "nvidia-curand-cu12==10.3.10.19",
  "nvidia-cusolver-cu12==11.7.5.82",
  "nvidia-cusparse-cu12==12.5.10.65",
  "nvidia-cusparselt-cu12==0.8.1",
  "nvidia-nccl-cu12==2.28.7",
  "nvidia-nvjitlink-cu12==12.9.86",
  "nvidia-nvtx-cu12==12.9.79",
  "packaging==25.0",
  "pillow==12.0.0",
  "PyYAML==6.0.3",
  "regex==2025.11.3",
  "requests==2.32.5",
  "safetensors==0.6.2",
  "slack_sdk==3.38.0",
  "ultralytics",
  "sympy==1.14.0",
  "tokenizers==0.22.1",
  "torch==2.9.1",
  "tqdm==4.67.1",
  "transformers==4.57.1",
  "triton==3.5.1",
  "typing_extensions==4.15.0",
  "urllib3==2.5.0",
  "yarl==1.22.0",
]

[project.scripts]
find-objects = "ppboatwatch.find_objects:main"
ppbbww = "ppboatwatch.ppbbww:main"
sample-streams = "ppboatwatch.sample_streams:main"

[tool.setuptools]
packages = ["ppboatwatch"]
